<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
                android:title="@string/pref_export_category">
	    <EditTextPreference
            android:key="PREFS_FILENAME_PREFIX"
            android:title="@string/pref_filename_prefix"
            android:summary=""
            android:defaultValue="stopwatch_"
            android:dialogTitle="@string/pref_filename_prefix" />
    </PreferenceCategory>
    <PreferenceCategory
                android:title="@string/pref_hardware_category">
	    <CheckBoxPreference
	        android:title="@string/pref_keep_screen_on"
	        android:summary="@string/pref_keep_screen_on_summary"
	        android:defaultValue="false"
	        android:key="PREFS_KEEP_SCREEN_ON"/>
	    <CheckBoxPreference
	        android:title="@string/pref_vibrate"
	        android:summary="@string/pref_vibrate_summary"
	        android:defaultValue="false"
	        android:key="PREFS_VIBRATE"/>
	    <CheckBoxPreference
	        android:title="@string/pref_use_hardware_buttons"
	        android:summary="@string/pref_use_hardware_buttons_summary"
	        android:defaultValue="false"
	        android:key="PREFS_USE_HW_BTN"/>
		<CheckBoxPreference
			android:title="@string/pref_night_mode"
			android:summary="@string/pref_night_mode_summary"
			android:defaultValue="false"
			android:key="PREFS_NIGHT_MODE"/>
	    	</PreferenceCategory>

</PreferenceScreen>
